Now it works somehow

--- a/Blog/Views/Home/Post.cshtml
+++ b/Blog/Views/Home/Post.cshtml
@@ -17,7 +17,7 @@
     }
 </div>
 <br>
-@foreach (CommentOnTopic c in Model.Comments)
+@foreach (TopicComment c in Model.Comments)
 {
     <p>@c.Comment.CommentText</p>
 }
