finished with voting and Repo refactoring

--- a/Blog/Views/Home/Index.cshtml
+++ b/Blog/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Models
-@model  IEnumerable<Vote>
+@model  VoteVM
 <h2>
     Welcome to my blog!!!
 </h2>
@@ -12,15 +12,18 @@ Whould you please open the <a href="/Home/Topics">List of topics</a>
         @using (Html.BeginForm())
         {
             <p><h3>Are you agree?</h3></p>
-         // @Html.DisplayTextFor(model => model.
-            foreach (Vote v in Model)
-            {
-                <p>@Html.RadioButtonFor(model => v.Position, )</p>
-                @*<p>@Html.RadioButton("yesno", v.VoteId) @v.Position</p>*@
+            foreach (Vote v in Model.votes) 
+            { 
+                <p>@Html.RadioButtonFor(model => model.selectedVote, v.VoteId) @v.Position</p>
             }
             <input type="submit" value="Vote" />
         }
         
-</div>
+    </div>
     
-}
+        @if (Model.votes[0].Count != 0 || Model.votes[1].Count != 0) 
+        { 
+            <p style="color:black; font-weight:bold; padding-left:10px" >@Model.votes[0].Count are agreed </p>
+            <p style="color:black; font-weight:bold; padding-left:10px">@Model.votes[1].Count are unsure </p>
+        }
+    }
