--- a/Blog/Content/Site.css
+++ b/Blog/Content/Site.css
@@ -94,10 +94,11 @@ footer {
    width: 900px;
    margin: auto;
    padding-top: 20px;
-   position:absolute;
-   height: 40px;
+   position:fixed;
+   height: 50px;
    bottom: 0;
    text-align: center;
+   font-size: small;
 }
 
 #main_body {
